<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/withe"
    tools:context="com.gohoc.xiupuling.ui.group.GroupDetailsActivity">
    <!-- 避免获得焦点 -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <requestFocus />
    </LinearLayout>
    <include
        layout="@layout/toolbar_tow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_tow_height" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/withe">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"

            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15.7dp"
                android:paddingRight="15dp"
                android:paddingTop="20dp">


                <com.gohoc.xiupuling.widget.roundimage.CircleImageView
                    android:id="@+id/shop_pic_iv"
                    android:layout_width="66.3dp"
                    android:layout_height="66.3dp"
                    android:background="@mipmap/icon_port_home" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/group_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:lines="1"
                        android:ellipsize="end"
                        android:textColor="#353535"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/group_type_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="12.3dp"
                        android:text=""
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:textColor="#424242"
                        android:textSize="12.7sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="30dp"
                android:paddingLeft="15.7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|top"
                    android:text="群标签："
                    android:textColor="#353535"
                    android:textSize="15.7dp" />

                <TextView
                    android:id="@+id/group_flage_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text=""
                    android:textColor="#909090"
                    android:textSize="12.7sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/splite_height"
                android:layout_marginLeft="15.7dp"
                android:layout_marginRight="15.7dp"
                android:background="@color/splite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingBottom="20dp"
                android:paddingLeft="15.7dp"
                android:paddingRight="15dp"
                android:paddingTop="20dp">


                <com.gohoc.xiupuling.widget.roundimage.CircleImageView
                    android:id="@+id/group_ter_cover_iv"
                    android:layout_width="43.3dp"
                    android:layout_height="43.3dp"
                    android:background="@mipmap/icon_port_home" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/terinal_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#353535"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/splite_height"
            android:background="@color/splite" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/bgc" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/splite_height"

                android:background="@color/splite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15.7dp"
                android:id="@+id/gonxiang"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="加入共享群后你可以"
                    android:textColor="#6b6b6b"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="23dp"
                    android:text="@string/joing_group_tips1"
                    android:textColor="#a8a8a8"
                    android:textSize="13sp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="23dp"
                    android:text="@string/joing_group_tips2"
                    android:textColor="#a8a8a8"
                    android:textSize="13sp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/liansuo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15.7dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="加入连锁群后你可以"
                    android:textColor="#6b6b6b"
                    android:textSize="15sp" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="23dp"
                    android:text="@string/joing_group_tips5"
                    android:textColor="#a8a8a8"
                    android:textSize="13sp" />



            </LinearLayout>
            <LinearLayout
                android:id="@+id/meiti"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15.7dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:text="加入媒体群后你可以"
                    android:textColor="#6b6b6b"
                    android:textSize="15sp" />


                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="23dp"
                    android:text="@string/joing_group_tips6"
                    android:textColor="#a8a8a8"
                    android:textSize="13sp" />



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="25dp">

                <EditText
                    android:id="@+id/invite_et"
                    android:layout_width="295dp"
                    android:layout_height="50dp"
                    android:inputType="number"
                    android:background="@drawable/soile_line_sp"
                    android:gravity="center"
                    android:text=""
                    android:hint="请输入该群组的最新邀请码"
                    android:textColor="#ee8e1c"
                    android:textSize="24sp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="24dp"
                    android:gravity="right"
                    android:paddingTop="9dp"
                    android:text="@string/joing_group_tips3"
                    android:textColor="#a8a8a8"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/sumbit_button_ll"
                android:layout_width="335dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="34dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/login_bt_selector"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="加入该群"
                    android:textSize="15sp"
                    android:textColor="@color/withe" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>


